--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Add A-Frame scene with your 3D model -->
     <a-scene>
         <a-entity 
-            gltf-model="models/your-model.glb"
+            gltf-model="models/guard.glb"
             position="0 0 -5"
             scale="1 1 1"
             rotation="0 0 0">
